# powerabi

./: .gitignore  MAKE.sh  Makefile.in  PPC-elf32abi.sgml  README  abi.dsl  abicommon.dsl  book-elfabi.sgml  chap1-elf32abi.sgml  chap2-elf32abi.sgml  chap3-elf32abi.sgml  chap4-elf32abi.sgml  chap5-elf32abi.sgml  chap6-elf32abi.sgml  colordef.dsl  configure  configure.ac  dont-include-checks.dsl  eabi.dsl  either-wrap-attribs.dsl  html-ttlpg.dsl  include-checks.dsl  linuxabi.dsl  print-ttlpg.dsl  tagid-stub.dsl  tagid.dsl  unified-wrap-attribs.dsl  unified.dsl  wrapit-stub.dsl  wrapper-stub.dsl  wrapper.dsl
graphics/svg/: README.txt
